yaml/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-app-dep
  labels:
    app: go-web-app
spec:
  selector:
    matchLabels:
      app: go-web-app
  replicas: 2
  template:
    metadata:
      name: go-web-app
      labels:
        app: go-web-app
    spec:
      containers:
        - name: go-web-app
          image: 
          ports:
          - containerPort: 8080
