yaml/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-app-service
spec:
  selector:
    app: go-web-app
  ports:
    - name: http
      protocol: tcp
      port: 8080
      targetPort: 8080
  type: LoadBalancer
