yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "go-web-app.local"
      http:
        paths:
          - pathType: prefix
            path: /
            backend:
              service:
                name: go-web-app-service
                port:
                  number: 80
